# hackathon-code

./: 0-README-I2RS  1-README_start  2-README_query  3-README-I2RS  i2rs_ietf_rib_working.tar  i2rsd_conf_v2.tar  i2rsd_confd.tar  ietf-i2rs-rib@2016-03-17.yang  ietf-pkt-eca-policy@2016-06-26.yang  yangcli-pro-15.10-4.u1404.i386.deb
quagga-i2rsd/: README_IMPORTANT_i2rs_build.txt  README_i2rs_build.txt  quagga_1.0.20160315-1.debian.tar.xz  quagga_1.0.20160315-1.dsc  quagga_1.0.20160315.orig.tar.xz
quagga-i2rsd/i2rs-source/: Makefile.am  SERVICES  configure.ac
quagga-i2rsd/i2rs-source/i2rs/: Makefile.am  Makefile.in  i2rs_main.c  i2rs_main.h  i2rs_vty.c  i2rs_vty.h  i2rs_zebra.c  i2rs_zebra.h  i2rsd.h
quagga-i2rsd/i2rs-source/pkgsrc/: Makefile.am  i2rs.sh.in
quagga-i2rsd/mininet/ospf_bgp/: start.py
quagga-i2rsd/mininet/ospf_bgp/conf/: i2rsd-r010_1.conf  zebra-r010_1.conf  zebra-r010_2.conf  zebra-r010_3.conf  zebra-r010_4.conf  zebra-r010_5.conf
